--- a/.src/About.form
+++ b/.src/About.form
@@ -2,6 +2,7 @@
 
 { Form Form
   MoveScaled(0,0,78,66)
+  Icon = Picture["icon1.png"]
   Arrangement = Arrange.Vertical
   Padding = 5
   { TextArea1 TextArea
