--- a/.src/FMain.form
+++ b/.src/FMain.form
@@ -2,7 +2,7 @@
 
 { Form Form
   MoveScaled(0,0,166,97)
-  Icon = Picture["icon.png"]
+  Icon = Picture["icon1.png"]
   Padding = 10
   { HBoxControl HBox
     MoveScaled(0,0,140,4)
@@ -12,7 +12,7 @@
     { ToolButtonStop ToolButton AllToolButtons
       Name = "ToolButtonStop"
       MoveScaled(2,0,4,4)
-      ToolTip = ("STOP!")
+      ToolTip = ("STOP! - [Esc]")
       Picture = Picture["icon:/22/stop"]
     }
     { Panel1 Panel
@@ -72,10 +72,6 @@
   { LabelStart Label
     MoveScaled(30,13,54,27)
     Visible = False
-    Font = Font["Ubuntu,Bold,+14"]
-    Foreground = Color.White
-    Text = ("Pong\n\nLeft keys \"A\" & \"Z\"\nRight keys [Up Arrow] & [Down Arrow]")
-    Alignment = Align.Center
   }
   { Timer1 #Timer
     #MoveScaled(134,36)
